minikube/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laravel-tasks-kubernetes-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: laravel-tasks-deployment
    servicePort: 80
  rules:
    - host: laravel-kubernetes.local
    - http:
        paths:
          - path: /
            backend:
              serviceName: laravel-tasks-deployment
              servicePort: 80
